--- a/res/layout/activity_splash.xml
+++ b/res/layout/activity_splash.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        android:textColor="#000"
+        android:textColor="@color/black"
         android:textSize="16sp"
         android:shadowColor="#ff00ff"
         android:shadowDx="1"
@@ -24,6 +24,18 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/tv_version"
         android:layout_centerHorizontal="true"
+        />
+
+    <TextView
+        android:id="@+id/tv_progress"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_marginLeft="5dp"
+        android:visibility="gone"
+        android:textSize="16sp"
+        android:textColor="@android:color/darker_gray"
         />
 
 </RelativeLayout>
