--- a/res/layout/activity_home.xml
+++ b/res/layout/activity_home.xml
@@ -5,32 +5,26 @@
     android:orientation="vertical" >
 
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="80dp"
-        android:text="功能列表" 
-        android:textColor="@color/black"
-        android:textSize="22sp"
-        android:gravity="center"
-        android:background="@color/green"
-        />
-    <com.project.mobilesafe.view.FocusedTextView 
+        style="@style/TitleStyle"
+        android:text="功能列表" />
+
+    <com.project.mobilesafe.view.FocusedTextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="15dp"
+        android:layout_marginTop="5dp"
         android:ellipsize="marquee"
         android:singleLine="true"
-        android:layout_marginTop="5dp"
-        android:layout_marginBottom="5dp"
         android:text="手机安全卫士，每时每刻保护你的手机,请放心使用，此软件为绿色安全软件"
         android:textColor="@color/black"
-        android:textSize="18sp"
-        />
+        android:textSize="18sp" />
+
     <GridView
         android:id="@+id/gv_home"
-        android:layout_weight="1"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:layout_weight="1"
         android:numColumns="3"
-        android:verticalSpacing="20dp"
-        />
+        android:verticalSpacing="20dp" />
 
 </LinearLayout>
