--- a/res/layout/activity_splash.xml
+++ b/res/layout/activity_splash.xml
@@ -2,6 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/rl_root"
     tools:context="com.project.mobilesafe.activity.SplashActivity" 
     android:background="@drawable/launcher_bg"
     >
