--- a/res/layout/view_setting_item.xml
+++ b/res/layout/view_setting_item.xml
@@ -8,7 +8,6 @@
         android:id="@+id/tv_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="自动更新设置"
         android:textColor="@color/black"
         android:textSize="22sp" />
 
@@ -18,7 +17,6 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/tv_title"
         android:layout_marginTop="3dp"
-        android:text="自动更新已经开启"
         android:textColor="#a000"
         android:textSize="16sp" />
 
@@ -27,7 +25,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
-        android:layout_centerVertical="true" />
+        android:layout_centerVertical="true" 
+        android:clickable="false"
+        android:focusable="false"
+        android:focusableInTouchMode="false"
+        />
 
     <View
         android:layout_width="match_parent"
