--- a/res/layout/activity_setup4.xml
+++ b/res/layout/activity_setup4.xml
@@ -10,6 +10,7 @@
         android:text="4.恭喜您，设置完成" />
 
     <CheckBox 
+        android:id="@+id/cb_status"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="防盗保护没有开启"
