--- a/res/layout/activity_contact.xml
+++ b/res/layout/activity_contact.xml
@@ -4,6 +4,10 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
     
+     <TextView 
+        style="@style/TitleStyle"
+        android:text="选择联系人"
+        />
 	<ListView 
 	    android:layout_width="match_parent"
 	    android:layout_height="wrap_content"
