--- a/res/layout/activity_setting.xml
+++ b/res/layout/activity_setting.xml
@@ -16,5 +16,13 @@
 	    setting:desc_on="自动更新已开启"
 	    setting:desc_off="自动更新已关闭"
 	    />
+	<com.project.mobilesafe.view.SettingItemView
+	    android:id="@+id/siv_address"
+	    android:layout_width="wrap_content"
+	    android:layout_height="wrap_content"
+	    setting:set_title="电话归属地显示设置"
+	    setting:desc_on="归属地显示已经开启"
+	    setting:desc_off="归属地显示已经关闭"
+	    />
     
 </LinearLayout>
