--- a/res/layout/dialog_input_password.xml
+++ b/res/layout/dialog_input_password.xml
@@ -8,7 +8,7 @@
 	<TextView 
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
-		android:background="#66ff6600"
+		android:background="@drawable/btn_green_pressed"
 		android:gravity="center"
 		android:padding="10dp"
 		android:text="输入密码"
