--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -26,7 +26,7 @@
         <item name="android:textColor">@color/black</item>
         <item name="android:textSize">22sp</item>
         <item name="android:gravity">center</item>
-        <item name="android:background">@color/green</item>
+        <item name="android:background">@drawable/btn_green_normal</item>
     </style>
     
     <style name="ContentStyle">
