--- a/res/layout/dialog_popup.xml
+++ b/res/layout/dialog_popup.xml
@@ -65,11 +65,11 @@
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/img3"
+            android:background="@drawable/img4"
             />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="详情"/>
+            android:text="设置"/>
     </LinearLayout>
 </LinearLayout>
