--- a/res/layout/item_task_manager.xml
+++ b/res/layout/item_task_manager.xml
@@ -38,6 +38,7 @@
         android:layout_height="wrap_content">
         <CheckBox
             android:id="@+id/cb_processStatus"
+            android:button="@drawable/btn_check"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
