--- a/res/layout/activity_atools.xml
+++ b/res/layout/activity_atools.xml
@@ -50,4 +50,18 @@
 		android:onClick="appLock"
 		android:drawableLeft="@android:drawable/ic_menu_camera"
 		/>
+	<TextView
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
+		android:background="@drawable/text_atools_selector"
+		android:gravity="center_vertical"
+		android:text="软件推荐"
+		android:textColor="@color/black"
+		android:padding="10dp"
+		android:drawablePadding="5dp"
+		android:clickable="true"
+		android:textSize="22sp"
+		android:onClick="appRecomment"
+		android:drawableLeft="@android:drawable/ic_menu_camera"
+		/>
 </LinearLayout>
