--- a/res/layout/activity_traffic_manager.xml
+++ b/res/layout/activity_traffic_manager.xml
@@ -5,14 +5,10 @@
     android:orientation="vertical">
 
     <TextView
-        android:id="@+id/tv_lock"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="已加锁软件"
-        />
+        style="@style/TitleStyle"
+        android:text="流量统计" />
     <ListView
-        android:id="@+id/lv_lock"
+        android:id="@+id/list_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-    </ListView>
+        android:layout_height="match_parent"></ListView>
 </LinearLayout>
